k8s/deploy/setup-internal-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: yas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: internal-api-gateway
  template:
    metadata:
      labels:
        app: internal-api-gateway
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: nginx-config
          configMap:
            name: internal-api-gateway-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: yas
spec:
  type: ClusterIP
  selector:
    app: internal-api-gateway
  ports:
    - name: http
      port: 80
      targetPort: 80
